---
source: client-gen/src/generator.rs
expression: "generate(program, \"Basic\").unwrap()"
---
// Code generated by sails-client-gen. DO NOT EDIT.
use core::marker::PhantomData;
use parity_scale_codec::{Decode, Encode};
#[allow(unused_imports)]
use sails_rtl::collections::BTreeMap;
#[allow(unused_imports)]
use sails_rtl::{
    calls::{Remoting, RemotingAction},
    prelude::*,
    String,
};
pub mod traits {
    use super::*;
    pub trait Basic<R, TCallArgs> {
        #[allow(clippy::type_complexity)]
        fn do_this(&mut self, p1: u32, p2: MyParam) -> RemotingAction<R, TCallArgs, u16>;
        #[allow(clippy::type_complexity)]
        fn do_that(&mut self, p1: (u8, u32)) -> RemotingAction<R, TCallArgs, u8>;
    }
}

#[derive(Clone)]
pub struct Basic<R, A>
where
    R: Remoting<A>,
    A: Default,
{
    remoting: R,
    _phantom: PhantomData<A>,
}

impl<A: Default, R: Remoting<A>> Basic<R, A> {
    pub fn new(remoting: R) -> Self {
        Self {
            remoting,
            _phantom: PhantomData,
        }
    }
}

impl<R, A> traits::Basic<R, A> for Basic<R, A>
where
    R: Remoting<A> + Clone,
    A: Default,
{
    fn do_this(&mut self, p1: u32, p2: MyParam) -> RemotingAction<R, A, u16> {
        RemotingAction::new(
            self.remoting.clone(),
            &[24, 68, 111, 84, 104, 105, 115],
            (p1, p2),
        )
    }
    fn do_that(&mut self, p1: (u8, u32)) -> RemotingAction<R, A, u8> {
        RemotingAction::new(self.remoting.clone(), &[24, 68, 111, 84, 104, 97, 116], p1)
    }
}
#[derive(PartialEq, Debug, Encode, Decode)]
pub struct MyParam {
    f1: u32,
    f2: Vec<String>,
    f3: Option<(u8, u32)>,
}
#[derive(PartialEq, Debug, Encode, Decode)]
pub enum MyParam2 {
    Variant1,
    Variant2(u32),
    Variant3((u32,)),
    Variant4((u8, u32)),
    Variant5 { f1: String, f2: Vec<u8> },
}

